# study-android-fcm

./: .editorconfig  .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/example/study/fcm/: AppFirebaseMessagingService.kt  MainActivity.kt
app/src/main/res/xml/: data_extraction_rules.xml
gradle/: libs.versions.toml
server/: Cargo.toml
server/src/: main.rs  prelude.rs
