[package]
name = "study-android-fcm-server"
edition = "2021"

[dependencies]
anyhow = "=1.0.86"
clap = { version = "=4.5.8", features = ["derive", "env"] }
dotenv = "=0.15.0"
jsonwebtoken = "=9.3.0"
reqwest = { version = "=0.12.5", features = ["blocking", "json"] }
serde = { version = "=1.0.203", features = ["serde_derive"] }
serde_json = "=1.0.120"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
